--- a/about/index.html
+++ b/about/index.html
@@ -51,13 +51,13 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/support" >Support</a></li>
-                <li><a href="/sponsors" >Sponsors</a></li>
-                <li><a href="/faq" >FAQ</a></li>
+                <li><a href="/sponsorship" >Sponsorship</a></li>
+                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <!--<li><a href="/faq" >FAQ</a></li>-->
                 <li><a href="/events" >Events</a></li>
-                <li><a href="/blog" >Blog</a></li>
-                <li><a href="/map" >Map</a></li>
-                <li><a href="/twitter" >Twitter</a></li>
+                <!--<li><a href="/blog" >Blog</a></li>-->
+                <!--<li><a href="/map" >Map</a></li>-->
+                <!--<li><a href="/twitter" >Twitter</a></li>-->
                 <li><a href="/about" class="active">About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
@@ -71,8 +71,15 @@
     <br>
     <p>Nunc    porta eu libero at vestibulum. Maecenas eu nibh eu ex ultricies convallis. Sed quis dolor efficitur, egestas tortor vehicula, tempor orci. Curabitur eu vehicula tortor, id tincidunt ipsum. Cras non risus enim. Nam ultricies mauris sem, at efficitur velit pulvinar vel. Suspendisse quis pellentesque orci, at lacinia mauris. Suspendisse cursus dolor non velit commodo, id accumsan risus finibus. Proin tempus mollis libero, at semper enim.
 </div>
+<div class="marquee">About the Organizer</div>
+<div class="body standard-text">
+    <p><span style="font-weight:400">Yitzchok Willroth</span> is a Talmudic scholar and independent web application engineer, consultant and coach living in Lakewood, New Jersey.</p>
+    <p>A start-up veteran, dev bootcamp instructor and frequent conference speaker, Yitzchok is the founder & organizer of the <a href="//shorephp.org">ShorePHP User Group</a>, a co-organizer of the <a href="//nyphp.org">NYPHP User Group</a>, and an active participant in the <a href="//phpmentoring.org">PHPMentoring Initiative.</a></p>
+    <p>Passionate about clean code and robust application architecture, he is also a strong proponent of remote teams as a way for software organizations to thrive while affording developers a healthy work:life balance.</p>
+    <p>You can see his open-source contributions on <a href="//github.com/coderabbi">github</a> and follow him on <a href="//twitter.com/coderabbi">twitter</a>; you may find him frequently in <a href="//webchat.freenode.net">FreenodeIRC</a>:#coderabbi.</p>
+</div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsor">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
