--- a/events/index.html
+++ b/events/index.html
@@ -51,13 +51,13 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/support" >Support</a></li>
-                <li><a href="/sponsors" >Sponsors</a></li>
-                <li><a href="/faq" >FAQ</a></li>
+                <li><a href="/sponsorship" >Sponsorship</a></li>
+                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <!--<li><a href="/faq" >FAQ</a></li>-->
                 <li><a href="/events" class="active">Events</a></li>
-                <li><a href="/blog" >Blog</a></li>
-                <li><a href="/map" >Map</a></li>
-                <li><a href="/twitter" >Twitter</a></li>
+                <!--<li><a href="/blog" >Blog</a></li>-->
+                <!--<li><a href="/map" >Map</a></li>-->
+                <!--<li><a href="/twitter" >Twitter</a></li>-->
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
@@ -247,7 +247,7 @@ Tutorial: Wax On, Wax Off - Coder Dojo, A Code Kata Workshop
 		</div>
     </div>        </div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsor">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
