--- a/faqs/1-penguin/index.html
+++ b/faqs/1-penguin/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-            Twitter Streams &middot; Wisdom as a Service
+            Wisdom as a Service
     </title>    <meta name="twitter:card" content="summary">
     <meta name="twitter:site" content="@wisdomtour">
     <meta name="twitter:creator" content="@wisdomtour">
@@ -57,7 +57,7 @@
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
                 <!--<li><a href="/map" >Map</a></li>-->
-                <!--<li><a href="/twitter" class="active">Twitter</a></li>-->
+                <!--<li><a href="/twitter" >Twitter</a></li>-->
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
@@ -65,24 +65,7 @@
     </header>
 
     <div class="content">
-        <style>
-    iframe[id^='twitter-widget-'] {
-        width:100% !important;
-        border: 2px solid #e8e8e8 !important;
-        border-radius: 7px !important;
-    }
-</style>
-<div class="body">
-    <a class="twitter-timeline" href="https://twitter.com/WisdomWorldTour" data-widget-id="550771475100475392">Tweets by @coderabbi</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</div>
-<div class="body">
-    <a class="twitter-timeline" href="https://twitter.com/hashtag/wisdomtour" data-widget-id="550773232547409920">Tweets by @coderabbi</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</div>
-<div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
-</div>
+        
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
         </footer>
