--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -51,13 +51,13 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/support" >Support</a></li>
-                <li><a href="/sponsors" class="active">Sponsors</a></li>
-                <li><a href="/faq" >FAQ</a></li>
+                <li><a href="/sponsorship" >Sponsorship</a></li>
+                <!--<li><a href="/sponsors" class="active">Sponsors</a></li>-->
+                <!--<li><a href="/faq" >FAQ</a></li>-->
                 <li><a href="/events" >Events</a></li>
-                <li><a href="/blog" >Blog</a></li>
-                <li><a href="/map" >Map</a></li>
-                <li><a href="/twitter" >Twitter</a></li>
+                <!--<li><a href="/blog" >Blog</a></li>-->
+                <!--<li><a href="/map" >Map</a></li>-->
+                <!--<li><a href="/twitter" >Twitter</a></li>-->
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
@@ -68,150 +68,97 @@
         <div class="marquee">Tour Sponsors</div>
 <div class="sponsors">
     <div class="sponsor-grid row">
-        <div class="col-lg-12"><div class="sponsor-image-top one-col">Your Logo Here</div></div>
+        <div class="col-lg-12"><div class="sponsor-image-top one-col">Your Logo Here</div><div class="sponsor-image-bottom titanium">Benefactor</div></div>
     </div>
-    <div class="row">
-        <div class="col-lg-12"><div class="sponsor-image-bottom titanium">Benefactor</div></div>
-    </div>
-    <div class="sponsor-grid row">
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
-        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
+    <div class="sponsor-grid row ">
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
-        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
-        <div class="col-lg-6"><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
+        <div class="col-lg-6"><div class="sponsor-image-top two-col">Your Logo Here</div><div class="sponsor-image-bottom platinum">Partner</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-4"><div class="sponsor-image-bottom gold">Sustainer</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-bottom gold">Sustainer</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-bottom gold">Sustainer</div></div>
+        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
+        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
+        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-4"><div class="sponsor-image-bottom gold">Sustainer</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-bottom gold">Sustainer</div></div>
-        <div class="col-lg-4"><div class="sponsor-image-bottom gold">Sustainer</div></div>
+        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
+        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
+        <div class="col-lg-4"><div class="sponsor-image-top three-col">Your Logo Here</div><div class="sponsor-image-bottom gold">Sustainer</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:69px; padding-bottom:70px"><img src="/assets/img/sponsors/benelux.png"></div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:89px; padding-bottom:89px"><img src="/assets/img/sponsors/confoo.gif"></div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col" style="padding-top:19px; padding-bottom:19px"><img src="/assets/img/sponsors/lonestar.png" style="height:170px"></div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
-        <div class="col-lg-3"><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
+        <div class="col-lg-3"><div class="sponsor-image-top four-col">Your Logo Here</div><div class="sponsor-image-bottom silver">Patron</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom bronze">Supporter</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div><div class="sponsor-image-bottom copper">Backer</div></div>
     </div>
     <div class="sponsor-grid row">
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-top six-col">Your Logo Here</div></div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
-        <div class="col-lg-2"><div class="sponsor-image-bottom copper">Backer</div></div>
+        <div class="col-lg-2">
+            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2">
+            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2">
+            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2">
+            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2">
+            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
+        <div class="col-lg-2">
+            <div class="sponsor-image-top six-col">Your Logo Here</div>
+            <div class="sponsor-image-bottom copper">Backer</div>
+        </div>
     </div>
 </div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsor">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
