--- a/faq/index.html
+++ b/faq/index.html
@@ -51,13 +51,13 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/support" >Support</a></li>
-                <li><a href="/sponsors" >Sponsors</a></li>
-                <li><a href="/faq" class="active">FAQ</a></li>
+                <li><a href="/sponsorship" >Sponsorship</a></li>
+                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <!--<li><a href="/faq" class="active">FAQ</a></li>-->
                 <li><a href="/events" >Events</a></li>
-                <li><a href="/blog" >Blog</a></li>
-                <li><a href="/map" >Map</a></li>
-                <li><a href="/twitter" >Twitter</a></li>
+                <!--<li><a href="/blog" >Blog</a></li>-->
+                <!--<li><a href="/map" >Map</a></li>-->
+                <!--<li><a href="/twitter" >Twitter</a></li>-->
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
@@ -71,10 +71,13 @@
                     
 <dt>So what&#039;s with the crazy penguin?</dt>
 <dd>This is an answer.</dd>
+                    
+<dt>Wisdom? Really!?</dt>
+<dd>This is an answer.</dd>
         	</dl>
 </div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsor">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
 
         <footer class="primary-footer">
