--- a/map/index.html
+++ b/map/index.html
@@ -51,13 +51,13 @@
 
         <div class="collapse navbar-collapse" id="mobile_nav">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/support" >Support</a></li>
-                <li><a href="/sponsors" >Sponsors</a></li>
-                <li><a href="/faq" >FAQ</a></li>
+                <li><a href="/sponsorship" >Sponsorship</a></li>
+                <!--<li><a href="/sponsors" >Sponsors</a></li>-->
+                <!--<li><a href="/faq" >FAQ</a></li>-->
                 <li><a href="/events" >Events</a></li>
-                <li><a href="/blog" >Blog</a></li>
-                <li><a href="/map" class="active">Map</a></li>
-                <li><a href="/twitter" >Twitter</a></li>
+                <!--<li><a href="/blog" >Blog</a></li>-->
+                <!--<li><a href="/map" class="active">Map</a></li>-->
+                <!--<li><a href="/twitter" >Twitter</a></li>-->
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
@@ -69,7 +69,7 @@
     <iframe src="https://mapsengine.google.com/map/u/0/embed?mid=zHQDbgFAuLwo.kHqKzxb0VSpA" height="900" style="overflow:hidden;width:100%;border:3px solid #e8e8e8;border-radius:7px;"></iframe>
 </div>
 <div class="outro">
-    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsor">Sponsorship Prospectus</a>.</p>
+    <p class="text-center">If you would like your message included as part of this worldwide conversation, please review the <a href="sponsorship">Sponsorship Prospectus</a>.</p>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
