--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -59,38 +59,15 @@
                 <!--<li><a href="/map" >Map</a></li>-->
                 <!--<li><a href="/twitter" >Twitter</a></li>-->
                 <li><a href="/about" >About</a></li>
-                <li><a href="/contact" class="active">Contact</a></li>
+                <li><a href="/contact" >Contact</a></li>
             </ul>
         </div>
     </header>
 
     <div class="content">
-        <div class="marquee">Contact Us</div>
-<div class="body standard-text">
-    Are you a:
-    <ul>
-        <li>Leader of a User Group that hopes to be included in the Tour?</li>
-        <li>Speaker interested in participating in one or more Tour events?</li>
-        <li>Representative of an organization that would like more information regarding sponsorship opportunities?</li>
-        <li>Developer that wants to join the conversation?</li>
-    </ul>
-    We would love to hear from you!  Please use the form below or contact us at <a href="mailto:info@wisdomworldtour.com" target="_top">info@wisdomworldtour.com</a>.
-    <form class="row contact" action="//formspree.io/info@wisdomworldtour.com" method="POST">
-		<div class="form-group col-md-8">
-			<input type="text" class="form-control" placeholder="Name" name="_replyto" required>
-		</div>
-		<div class="form-group col-md-8">
-			<input type="email" class="form-control" placeholder="E-mail address" name="email" required>
-		</div>
-        <input type="hidden" name="_next" value="/thank-you">
-        <input class="gotcha" type="text" name="_gotcha" style="display:none" />
-		<div class="form-group col-md-12">
-			<textarea class="form-control" rows="8" name="body" placeholder="Share what's on your mind..." required></textarea>
-		</div>
-		<div class="col-md-12">
-			<button type="submit" class="btn btn-default" value="Send">Submit</button>
-		</div>
-	</form>
+        <div class="marquee">Thank You!</div>
+<div class="body standard-text" style="margin-top:5em;margin-bottom:5em;">
+    <center>Thank you for your interest in the Wisdom as a Service World Tour.  Someone will get back with you shortly.</center>
 </div>
         <footer class="primary-footer">
             &copy; 2015 Wisdom as a Service &nbsp;&nbsp;|&nbsp;&nbsp; <a href="http://twitter.com/coderabbi"><i class="fa fa-twitter primary-footer__social"></i></a>
