--- a/404.html
+++ b/404.html
@@ -65,7 +65,8 @@
     </header>
 
     <div class="content">
-        <div class="message">
+        <div class="marquee">Uh-oh!</div>
+<div class="message">
     Hmmmm. There doesn't seem to be anything here.
 </div>
         <footer class="primary-footer">
