--- a/contact/index.html
+++ b/contact/index.html
@@ -75,14 +75,14 @@
         <li>Developer that wants to join the conversation?</li>
     </ul>
     We would love to hear from you!  Please use the form below or contact us at <a href="mailto:info@wisdomworldtour.com" target="_top">info@wisdomworldtour.com</a>.
-    <form class="row contact" action="//formspree.io/info@wisdomworldtour.com" method="POST">
+    <form action="http://formspree.io/info@wisdomworldtour.com" method="POST" class="row contact">
 		<div class="form-group col-md-8">
 			<input type="text" class="form-control" placeholder="Name" name="_replyto" required>
 		</div>
 		<div class="form-group col-md-8">
 			<input type="email" class="form-control" placeholder="E-mail address" name="email" required>
 		</div>
-        <input type="hidden" name="_next" value="/thank-you">
+        <input type="hidden" name="_next" value="//wisdomworldtour.com/thank-you">
         <input class="gotcha" type="text" name="_gotcha" style="display:none" />
 		<div class="form-group col-md-12">
 			<textarea class="form-control" rows="8" name="body" placeholder="Share what's on your mind..." required></textarea>
