--- a/about/index.html
+++ b/about/index.html
@@ -67,9 +67,19 @@
     <div class="content">
         <div class="marquee">About the Tour</div>
 <div class="body standard-text">
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vitae tortor imperdiet, cursus nibh quis, eleifend libero. Praesent porttitor felis eu bibendum pharetra. Morbi pulvinar laoreet est, vitae commodo mi bibendum ac. Maecenas sagittis est eget libero dapibus, in pulvinar nibh venenatis. Integer vel feugiat massa, et iaculis erat. Duis in nisi sapien. Aenean sed quam diam.
-    <br>
-    <p>Nunc    porta eu libero at vestibulum. Maecenas eu nibh eu ex ultricies convallis. Sed quis dolor efficitur, egestas tortor vehicula, tempor orci. Curabitur eu vehicula tortor, id tincidunt ipsum. Cras non risus enim. Nam ultricies mauris sem, at efficitur velit pulvinar vel. Suspendisse quis pellentesque orci, at lacinia mauris. Suspendisse cursus dolor non velit commodo, id accumsan risus finibus. Proin tempus mollis libero, at semper enim.
+    <p>The Wisdom as a Service World Tour was launched as a response to the <a href='//www.getpantheon.com/blog/phpworld-best-show'>tremendous</a>
+    <a href="https://storify.com/coderabbi/talmudic-maxims-to-maximizeyour-growth-as-a-develo">positive</a> <a href="http://ericlbarnes.com/talmudic-maxims-maximize-growth-software-developer/">reaction</a>
+    to the organizer's talk at the recent <a href="//world.phparch.com/">[php]world</a> on community, software craftsmanship, personal development and professional growth.
+    It was immediately obvious that this was a message that the development community was eager to hear, the only question
+    being how to involve more voices in the conversation.</p>
+    <p>Initially the Tour was conceived as a personal undertaking and limited to conferences and a few User Groups in their vicinities,
+    but the overwhelming interest from User Groups around the world made it clear that a larger initiative was needed. A native of Iowa,
+    the organizer has always believed that if you <a href="http://en.wikipedia.org/wiki/Field_of_Dreams">"build it, they will come"</a>... and
+    it wasn't long before the larger Tour became a reality.</p>
+    <p>Sponsorship is still being arranged and Tour events are still being planned, but the expectation is that
+    the Tour will be able to include a minimum of 35 User Groups around the word, connecting with over 2000 PHP
+    developers.  Our hope is that additional speakers can be added to the Tour and that ultimately the Tour
+    can be extended to all User Groups expressing an interest.</p>
 </div>
 <div class="marquee">About the Organizer</div>
 <div class="body standard-text">
