--- a/events/2015-02-20/index.html
+++ b/events/2015-02-20/index.html
@@ -55,7 +55,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/sponsorship" >Sponsorship</a></li>
                 <!--<li><a href="/sponsors" >Sponsors</a></li>-->
-                <!--<li><a href="/faq" >FAQ</a></li>-->
+                <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
                 <!--<li><a href="/map" >Map</a></li>-->
