--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -53,7 +53,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="/sponsorship" >Sponsorship</a></li>
                 <!--<li><a href="/sponsors" class="active">Sponsors</a></li>-->
-                <!--<li><a href="/faq" >FAQ</a></li>-->
+                <li><a href="/faq" >FAQ</a></li>
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
                 <!--<li><a href="/map" >Map</a></li>-->
