--- a/faq/index.html
+++ b/faq/index.html
@@ -78,7 +78,7 @@ Personal Growth and Professional Development, organized by a <a href="/about">Ra
 </dd>
                     
 <dt>Will the Tour be coming to my local User Group?</dt>
-<dd>We'd love to! The reality is that Tour events are still bing planned and the duration and reach of the Tour will 
+<dd>We'd love to! The reality is that Tour events are still being planned and the duration and reach of the Tour will 
 be determined by the <a href="sponsorship">support</a> of community sponsors. If you're interested in the Tour visiting your 
 User Group, <a href='/contact'>drop us a line</a>; we'll do everything we can to include you. If you're a potential 
 sponsor able to help make that a reality, we'd also love to speak with you.
