--- a/map/index.html
+++ b/map/index.html
@@ -57,7 +57,7 @@
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
                 <!--<li><a href="/map" class="active">Map</a></li>-->
-                <!--<li><a href="/twitter" >Twitter</a></li>-->
+                <li><a href="/twitter" >Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
