--- a/twitter/index.html
+++ b/twitter/index.html
@@ -57,7 +57,7 @@
                 <li><a href="/events" >Events</a></li>
                 <!--<li><a href="/blog" >Blog</a></li>-->
                 <!--<li><a href="/map" >Map</a></li>-->
-                <!--<li><a href="/twitter" class="active">Twitter</a></li>-->
+                <li><a href="/twitter" class="active">Twitter</a></li>
                 <li><a href="/about" >About</a></li>
                 <li><a href="/contact" >Contact</a></li>
             </ul>
@@ -73,11 +73,11 @@
     }
 </style>
 <div class="body">
-    <a class="twitter-timeline" href="https://twitter.com/WisdomWorldTour" data-widget-id="550771475100475392">Tweets by @coderabbi</a>
+    <a class="twitter-timeline" href="https://twitter.com/WisdomWorldTour" data-widget-id="550771475100475392">&nbsp;</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div class="body">
-    <a class="twitter-timeline" href="https://twitter.com/hashtag/wisdomtour" data-widget-id="550773232547409920">Tweets by @coderabbi</a>
+    <a class="twitter-timeline" href="https://twitter.com/hashtag/wisdomtour" data-widget-id="552507374423273473">&nbsp;</a>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </div>
 <div class="outro">
