--- a/events/2015-02-20/index.html
+++ b/events/2015-02-20/index.html
@@ -81,7 +81,7 @@ Talk: From London to Chicago: A Conceptual Map for Unit Testing
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    ga('send', '', 'pageview');
+    ga('send', 'UA-58267958-1', 'pageview');
 </script>
 </body>
 </html>
