--- a/faq/index.html
+++ b/faq/index.html
@@ -85,7 +85,7 @@ sponsor able to help make that a reality, we'd also love to speak with you.
 </dd>
                     
 <dt>Can I join the Tour?</dt>
-<dd>We'd be thirlled to have additional speakers help us engage the community in this important conversation. Please <a href="/contact">
+<dd>We'd be thrilled to have additional speakers help us engage the community in this important conversation. Please <a href="/contact">
 reach out to us</a> and tell us about your message.
 </dd>
         	</dl>
